<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">UPlayer</string>
    <string name="default_playlist">Default Playlist</string>

    <string name="query">Query</string>
    <string name="bookmarks">Book marks</string>
    <string name="artists">Artists</string>
    <string name="last_added">Last added</string>
    <string name="last_played">Last played</string>
    <string name="most_played">Most played</string>

    <string name="title">Title&#8230;</string>
    <string name="artist">Artist&#8230;</string>
    <string name="min_year">Min year&#8230;</string>
    <string name="max_year">Max year&#8230;</string>
    <string name="select_min_added">Min added&#8230;</string>
    <string name="select_max_added">Max added&#8230;</string>
    <string name="all">All</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="not_bookmarked">Not bookmarked</string>
    <string name="select_tags">Tags&#8230;</string>
    <string name="selected_tags" tools:ignore="PluralsCandidate">%1$d tags</string>
    <string name="select_playlists">Playlists&#8230;</string>
    <string name="selected_playlists" tools:ignore="PluralsCandidate">%1$d playlists</string>
    <string name="select_min_last_played">Min last played&#8230;</string>
    <string name="select_max_last_played">Max last played&#8230;</string>
    <string name="min_times_played">Min times played&#8230;</string>
    <string name="max_times_played">Max times played&#8230;</string>
    <string name="desc">Desc</string>
    <string name="statistics">Statistics</string>
    <string name="not_selected">Not: %1$s</string>

    <string name="settings">Settings</string>
    <string name="database">Database</string>
    <string name="sync_database">Synchronize with storage</string>
    <string name="sync_database_confirm">Synchronize database?</string>
    <string name="synchronizing_database">Synchronizing database&#8230;</string>
    <string name="sync_completed">Sync completed</string>
    <string name="sync_completed_message" tools:ignore="PluralsCandidate">%1$d artists\n%2$d inserted, %3$d updated, %4$d deleted\n\n%5$d songs\n%6$d inserted, %7$d updated, %8$d deleted</string>
    <string name="backup">Backup</string>
    <string name="backup_completed">Backup completed</string>
    <string name="restore_backup">Restore backup</string>
    <string name="restore_backup_confirm">Restore backup?</string>
    <string name="restoring_backup">Restoring backup&#8230;</string>
    <string name="backup_restored">Backup restored</string>
    <string name="resume_offset">Seek back when resuming</string>
    <string name="songs">Songs</string>
    <string name="resume_offset_song">Resume offset for songs</string>
    <string name="playlists">Playlists</string>
    <string name="resume_offset_playlist">Resume offset for playlists</string>
    <string name="in_seconds">In seconds</string>

    <string name="play_next">Play next</string>
    <string name="play_last">Play last</string>
    <string name="playing_all_next">Playing next</string>
    <string name="playing_all_last">Playing last</string>
    <string name="playing_song_next">Playing next: \'%1$s\'</string>
    <string name="playing_song_last">Playing last: \'%1$s\'</string>
    <string name="songs_statistics">Statistics&#8230;</string>
    <string name="filter">Filter&#8230;</string>
    <string name="clear_filter">Clear filter</string>

    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="remove">Remove</string>

    <string name="move">Move&#8230;</string>
    <string name="view_artist">Artist&#8230;</string>

    <string name="edit">Edit</string>
    <string name="edit_song">Edit song</string>
    <string name="view_playlists">Playlists&#8230;</string>
    <string name="edit_title">Title:</string>
    <string name="edit_artist">Artist:</string>
    <string name="edit_duration">Duration:</string>
    <string name="edit_year">Year:</string>
    <string name="edit_added">Added:</string>
    <string name="edit_tag">Tag:</string>
    <string name="edit_bookmarked">Bookmarked:</string>
    <string name="edit_last_played">Last played:</string>
    <string name="edit_times_played">Times played:</string>
    <string name="select_bookmarked">Bookmarked&#8230;</string>
    <string name="added_to_playlists">Added to %1$s</string>
    <string name="removed_from_playlists">Removed from %1$s</string>
    <string name="added_to_and_removed_from_playlists">Added to %1$s and removed from %2$s</string>
    <string name="playlist_count" tools:ignore="PluralsCandidate">%1$d playlists</string>
    <string name="song_updated">Song updated</string>

    <string name="bookmark">Bookmark</string>
    <string name="bookmark_set">Bookmark set</string>
    <string name="bookmark_cleared">Bookmark cleared</string>

    <string name="playlist_position">%1$d of %2$d (%3$s left)</string>
    <string name="pause_play">Pause / Play</string>
    <string name="next">Next</string>
    <string name="stop">Stop</string>

    <string name="stats_total">Total:</string>
    <string name="stats_rest">Rest:</string>
    <string name="stats_played">Played:</string>
    <string name="stats_unplayed">Unplayed:</string>
    <string name="stats_bookmarked">Bookmarked:</string>
    <string name="stats_unbookmarked">Unbookmarked:</string>
    <string name="stats_tagged">Tagged:</string>
    <string name="stats_untagged">Untagged:</string>
    <string name="stats_playlisted">Playlisted:</string>
    <string name="stats_unplaylisted">Unplaylisted:</string>
    <string name="stats_avg">avg %1$s</string>
    <string name="stats_last_added">Last added:</string>
    <string name="stats_last_played">Last played:</string>
    <string name="stats_times_played">Times played:</string>
    <string name="stats_avg_times_played">Avg times played:</string>

    <string name="shuffle">Shuffle</string>

    <string name="mark_played">Mark played &amp; stop</string>
    <string name="mark_played_confirm">Mark \'%1$s\' played?</string>
    <string name="times_played">Times played: %1$d</string>

    <string name="save_playlist">Save playlist</string>
    <string name="save_playlist_confirm">Overwrite \'%1$s\'?</string>
    <string name="playlist_saved">Playlist saved</string>

    <string name="add">Add</string>
    <string name="add_playlist">Add playlist</string>
    <string name="rename">Rename</string>
    <string name="rename_playlist">Rename playlist</string>
    <string name="name">Name&#8230;</string>
    <string name="cannot_delete_default_playlist">Cannot delete the default playlist</string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm">Delete \'%1$s\'?</string>
    <string name="deleted">\'%1$s\' deleted</string>
    <string name="select_all">Select all</string>
    <string name="not">Not</string>

    <plurals name="songs">
        <item quantity="one">%1$d song</item>
        <item quantity="other">%1$d songs</item>
    </plurals>

    <plurals name="tags">
        <item quantity="one">%1$d tag</item>
        <item quantity="other">%1$d tags</item>
    </plurals>

    <plurals name="playlists">
        <item quantity="one">%1$d playlist</item>
        <item quantity="other">%1$d playlists</item>
    </plurals>

    <string-array name="song_sort_columns">
        <item />
        <item>Added</item>
        <item>Last played</item>
        <item>Times played</item>
        <item>Duration</item>
        <item>Year</item>
        <item>Tag</item>
        <item>Bookmarked</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
