<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/play_next"
        android:title="@string/play_next"
        android:icon="@drawable/ic_menu_play_next"
        app:showAsAction="always" />

    <item
        android:id="@+id/play_last"
        android:title="@string/play_last"
        android:icon="@drawable/ic_menu_play_last"
        app:showAsAction="always" />

    <item
        android:id="@+id/statistics"
        android:title="@string/songs_statistics"
        android:icon="@drawable/ic_menu_statistics"
        app:showAsAction="always"/>

    <item
        android:id="@+id/filter"
        android:title="@string/filter" />

    <item
        android:id="@+id/clear_filter"
        android:title="@string/clear_filter" />

</menu>