<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:paddingStart="@dimen/list_item_padding_start"
    android:paddingEnd="@dimen/list_item_padding_end"
    android:minHeight="@dimen/list_item_height"
    android:descendantFocusability="blocksDescendants"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/list_item_text"
            android:textSize="@dimen/list_item_text_large" />

        <TextView
            android:id="@+id/tvArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/list_item_text"
            android:textSize="@dimen/list_item_text_small" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibMoveUp"
            android:layout_width="@dimen/list_item_button_width_playlist_move"
            android:layout_height="@dimen/list_item_button_height_playlist_move"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_move_up"
            android:contentDescription="@string/move_up" />

        <ImageButton
            android:id="@+id/ibMoveDown"
            android:layout_width="@dimen/list_item_button_width_playlist_move"
            android:layout_height="@dimen/list_item_button_height_playlist_move"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_move_down"
            android:contentDescription="@string/move_down" />

        <ImageButton
            android:id="@+id/ibRemove"
            android:layout_width="@dimen/list_item_button_width"
            android:layout_height="@dimen/list_item_button_height"
            android:layout_toEndOf="@+id/ibMoveUp"
            android:src="@drawable/ic_remove"
            android:contentDescription="@string/remove" />

    </RelativeLayout>

</LinearLayout>