<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSongTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/TextAppearance.Compat.Notification.Title" />

            <TextView
                android:id="@+id/tvSongArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/TextAppearance.Compat.Notification.Line2" />

            <TextView
                android:id="@+id/tvPlaylistPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/TextAppearance.Compat.Notification.Info" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="end|bottom">

            <TextView
                android:id="@+id/tvSongYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/TextAppearance.Compat.Notification.Info" />

            <TextView
                android:id="@+id/tvSongTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/TextAppearance.Compat.Notification.Info" />

            <TextView
                android:id="@+id/tvSongPlaylistNames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/TextAppearance.Compat.Notification.Info" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibEditSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notification_edit_song"
            android:contentDescription="@string/edit_song" />

        <ImageButton
            android:id="@+id/ibPausePlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pause_play" />

        <ImageButton
            android:id="@+id/ibNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notification_next"
            android:contentDescription="@string/next" />

        <ImageButton
            android:id="@+id/ibStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notification_stop"
            android:contentDescription="@string/stop" />

        <TextView
            android:id="@+id/tvVolume"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            style="@style/TextAppearance.Compat.Notification" />

        <ImageButton
            android:id="@+id/ibVolumeDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notification_volume_down"
            android:contentDescription="@string/stop" />

        <ImageButton
            android:id="@+id/ibVolumeUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notification_volume_up"
            android:contentDescription="@string/stop" />

    </LinearLayout>

</LinearLayout>