<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:paddingStart="@dimen/list_item_padding_start"
    android:minHeight="@dimen/list_item_height"
    android:descendantFocusability="blocksDescendants"
    android:baselineAligned="false"
    tools:ignore="RtlSymmetry">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/list_item_text_large"
            android:maxLines="1"
            android:ellipsize="end" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/list_item_text_small"
                android:maxLines="1"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/tvComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingStart="@dimen/list_item_info_padding_start"
                android:textSize="@dimen/list_item_text_small"
                android:maxLines="1"
                android:ellipsize="end" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ibMoveUp"
                android:layout_width="@dimen/list_item_button_width_small"
                android:layout_height="@dimen/list_item_button_height_small"
                android:paddingStart="@dimen/list_item_first_button_padding_start"
                android:paddingEnd="@dimen/list_item_button_padding_end"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_list_item_move_up"
                android:contentDescription="@string/move_up" />

            <ImageButton
                android:id="@+id/ibMoveDown"
                android:layout_width="@dimen/list_item_button_width_small"
                android:layout_height="@dimen/list_item_button_height_small"
                android:paddingStart="@dimen/list_item_first_button_padding_start"
                android:paddingEnd="@dimen/list_item_button_padding_end"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_list_item_move_down"
                android:contentDescription="@string/move_down" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/ibRemove"
            android:layout_width="@dimen/list_item_button_width_large"
            android:layout_height="@dimen/list_item_button_height_large"
            android:paddingStart="@dimen/list_item_button_padding_start"
            android:paddingEnd="@dimen/list_item_button_padding_end"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_list_item_remove"
            android:contentDescription="@string/remove" />

    </LinearLayout>

</LinearLayout>